优化扫码器退出逻辑
Signed-off-by: Hao_cen <haocen.minecraft@qq.com>